src/test/ui/feature-gates/feature-gate-rustc_const_unstable.stderr
error[E0658]: the `#[rustc_const_unstable]` attribute is an internal feature
  --> $DIR/feature-gate-rustc_const_unstable.rs:8:1
   |
LL | #[rustc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(rustc_const_unstable)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
